@@ -132,9 +132,8 @@ serd_node_new_uri_from_string(const char* SERD_NULLABLE        str,
 /**
    Create a new file URI node from a file system path and optional hostname.
 
-   Backslashes in Windows paths will be converted and '%' will always be
-   percent encoded.  If `escape` is true, all other invalid characters will be
-   percent encoded as well.
+   Backslashes in Windows paths will be converted, and other characters will be
+   percent encoded as necessary.
 
    If `path` is relative, `hostname` is ignored.
    If `out` is not NULL, it will be set to the parsed URI.
@@ -142,8 +141,7 @@ serd_node_new_uri_from_string(const char* SERD_NULLABLE        str,
 SERD_API SerdNode
 serd_node_new_file_uri(const char* SERD_NONNULL   path,
                        const char* SERD_NULLABLE  hostname,
-                       SerdURIView* SERD_NULLABLE out,
-                       bool                       escape);
+                       SerdURIView* SERD_NULLABLE out);
 
 /**
    Create a new node by serialising `uri` into a new string.
